--- a/_posts/2019-04-30-1.markdown
+++ b/_posts/2019-04-30-1.markdown
@@ -11,15 +11,23 @@ author: Hailey Haeun Park
 description: I FINALLY started Github pages!
 ---
 
-## 깃허브 페이지를 만들었다.
+##I FINALLY started Github pages!
 
-그리고 오늘은 잠시 토론토를 떠나 한국으로 가기 전, 토론토에서 보내는 마지막 날입니다!
+Today is May 1st 2019, the day I'm flying out to Seoul. It's been a year since I left there on April 27th, 2018!
+One of my goal this May is creating my own Github page and post at least 2 blogs.
+So, I'm posting this blog at Toronto Pearson Airport that always brings up the memory of the first day in Canada.
 
-1년 전 비행하면서 들었던 노래
+I just wanna share some songs that I can't love more and the feelings I go through whenever I listen to the songs.
+
+One is _Lee Sora - Track 9_. This comforting song is what I listened to at the plane to Toronto. I embedded the youtube video playing with a river view of Seoul I can't wait to see it.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5LzfjF1ESIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+The other one is the song I'm gonna listen to in the air heading to Seoul. I've known this band only for 3 weeks but I'm sure I'll stan it for a long time cuz this band let me know the coolness of Thai indie band. It's a shame I can't understand Thai tho.
 
-이건 내일 비행하면서 들을 노래! (몇주째 최애곡 최애밴드랍니다 태국 짱...)
+_Safeplanet - คำตอบ_
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/P2y-C4sQfCc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+Anyway, I hope you all like my new Github page and this bops. See you in Korea! 
