--- a/_posts/2019-05-01-1.markdown
+++ b/_posts/2019-05-01-1.markdown
@@ -22,22 +22,22 @@ I just wanna share some songs that I can't love more and the feelings I go throu
 
 
 
-
-  <center>
 One is **_Lee Sora - Track 9_**. This comforting song is what I listened to at the plane to Toronto. I embedded the youtube video playing with a river view of Seoul I can't wait to see it.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/5LzfjF1ESIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5LzfjF1ESIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
 
 
- <center>
+
+
 The other one is **_Safeplanet - คำตอบ_**, the song I'm gonna listen to in the air heading to Seoul. I've known this band only for 3 weeks but I'm sure I'll stan it for a long time cuz this band let me know the coolness of Thai indie band. It's a shame I can't understand Thai tho.
 
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/P2y-C4sQfCc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/P2y-C4sQfCc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 
 
