--- a/_posts/2019-05-11-word0.markdown
+++ b/_posts/2019-05-11-word0.markdown
@@ -4,6 +4,7 @@ layout: post
 date: 2019-05-11 12:20
 image: /assets/images/markdown.jpg
 headerImage: false
+projects : true
 tag:
 - project
 - wordproject
