--- a/_posts/2019-05-11-word0.markdown
+++ b/_posts/2019-05-11-word0.markdown
@@ -15,7 +15,7 @@ description: Word Project #0
 
 <div style="text-align: center;
 font-family=Times new roman;"
-font-size="140%;">
+font-size=140%;">
 Are you a type of person who believes in the constellation test? <br><br>
 
 Are you a type of person who tries all kinds of personality test like MBTI even though you know what you are?<br><br>
@@ -24,7 +24,7 @@ Are you a type of person who asks others the first impression of you?<br><br>
 
 Congratulations!<br><br>
 
-​<img src="/assets/images/samehere.jpeg"
+​<img src="samehere.jpeg"
      alt="Same here!"
      height=400px;
      width=650px;>
