--- a/_posts/2019-05-11-word0.markdown
+++ b/_posts/2019-05-11-word0.markdown
@@ -12,6 +12,7 @@ category: project
 author: Hailey Haeun Park
 description: Word Project #0
 ---
+
 <html>
 <div style="text-align:center;
   font-family:Times new roman;
@@ -25,10 +26,10 @@ Are you a type of person who asks others the first impression of you?<br><br>
 
 Congratulations!<br><br>
 
-​<img src="samehere.jpeg"
-     alt="Same here!"
-     height=400px;
-     width=650px;>
+​<img src="samehere.jpeg";
+     alt="Same here!";
+     height="400px";
+     width="650px";>
 
 If you are those type of person, <br><br>
 
