--- a/_posts/2019-05-11-word0.markdown
+++ b/_posts/2019-05-11-word0.markdown
@@ -18,9 +18,12 @@ description: Word Project #0
   font-family:Times new roman;
   font-size:140%;
   color:black">
+  
 Are you a type of person who believes in the constellation test? <br><br>
 
+
 Are you a type of person who tries all kinds of personality test like MBTI even though you know what you are?<br><br>
+
 
 Are you a type of person who asks others the first impression of you?<br><br>
 
@@ -37,7 +40,7 @@ you are on the right track.<br><br><br>
 
 ​
 
-Just like you, I, iterally, love analyzing the characteristics of my favorite movies' heroes, or celebrities. However, the funniest personal trait to analyze would be mine.
+Just like you, I literally love analyzing the characteristics of my favorite movies' heroes, or celebrities. However, the funniest trait to scrutinize would be mine.
 <br><br><br>
 ​
 
@@ -61,7 +64,7 @@ scientific,<br><br>
 
 and terrific.<br><br>
 
-(This is my first time to make English rhyme.)<br><br><br>
+(This is my first time making English rhyme.)<br><br><br>
 
 ​
 
@@ -73,34 +76,29 @@ because<br><br><br>
 
 
 
-As a human, we are continuously influenced by the beloved books, films, and musics and they make ourselves even though we seem an abstract and independent creatures.  <br><br>
+As human, we are continuously influenced by beloved books, films, and music. And it's uncontentious that they make ourselves even though we seem abstract and independent creatures.  <br><br>
 
 
-The things I want to analyze and share with you are<br><br>
+The things I want to analyze and share with you are are<br><br>
 
 ​
 
-1. What is the word that appears most often in the titles of books on my book wish list?
+1. What is the word that appears most often in the titles of books on my book wishlist?
 <br>
-2. What publishers are my favorite?
+2. What publishing corporation is my favorite?
 <br>
-3. What book series I love the most?
+3. What book series do I love the most?
 <br>
 4. What kind of book I am interested in the most?
 <br><br><br><br>
 ​
 
 ​
-
-​
-
-I hope I can pioneer one kind of art that only I can do, based on what I found aside from the truth.
-
 ​
 <br><br>
 ​
 
-Would you dive into my book wish list?
+Shall we dive into my book wish list?
 
 ​<br><br>
 
