--- a/_posts/2019-05-11-word0.markdown
+++ b/_posts/2019-05-11-word0.markdown
@@ -83,7 +83,7 @@ The things I want to analyze and share with you are are<br><br>
 
 ​
 
-1. What is <p style="font-color:red;">the word that appears most often in the titles</p> of books on my book wishlist?
+1. What is <span style="font-color:red;"><strong> the word that appears most often in the titles</strong></span> of books on my book wishlist?
 <br>
 2. What publishing corporation is my favorite?
 <br>
