--- a/_posts/2019-05-11-word0.markdown
+++ b/_posts/2019-05-11-word0.markdown
@@ -1,5 +1,5 @@
 ---
-title: "Word Project #0"
+title: "Word Project 0: Introduction"
 layout: post
 date: 2019-05-11 12:20
 image: /assets/images/markdown.jpg
@@ -13,98 +13,83 @@ author: Hailey Haeun Park
 description: Word Project #0
 ---
 
-<html>
-<div style="text-align:center;
-  font-family:Times new roman;
-  font-size:140%;
-  color:black">
 
-Are you a type of person who believes in the constellation test? <br><br>
+  혹시 당신.. MBTI 결과가 안 바뀌었을 걸 알면서도 MBTI 사이트 링크가 눈에 보일 때마다 해보시나요?
 
+  남한테 툭하면 '내 첫인상 어땠어?'를 물어보시나요?
 
-Are you a type of person who tries all kinds of personality test like MBTI even though you know what you are?<br><br>
+  무신론자에 유사과학을 믿지 않으면서도 괜히 사주 검색해보려고 부모님께 탄생시간을 물어본 적이 있나요?^^
+
+<![samehere](samehere.jpeg)
 
 
-Are you a type of person who asks others the first impression of you?<br><br>
-
-Congratulations!<br><br>
-
-<img src="/assets/images/samehere.jpeg"
-     alt="Same here!"
-     style="width:360px; height:250px;" />
-<br><br>
 If you are those type of person, <br><br>
 
 you are on the right track.<br><br><br>
 
 ​
+축하합니다
 
-Just like you, I literally love analyzing the characteristics of my favorite movies' heroes, or celebrities. However, the funniest trait to scrutinize would be mine.
-<br><br><br>
-​
+그렇다면 당신은
 
-Let's keep behind the fact that I once, like 3 seconds, planned having a star debut just to be analyzed by my imaginary fans.
+캐.해 중독자 입니다.
 
-​<br><br><br><br>
-
-​
-
-SO,
-
-​<br><br><br>
-
-I'm gonna analyze my book wishlist that I've bookmarked and saved for a year <br><br>
-
-using R <br><br>
-
-to be specific,<br><br>
-
-scientific,<br><br>
-
-and terrific.<br><br>
-
-(This is my first time making English rhyme.)<br><br><br>
+(캐.해: 캐릭터 해석 / 팬들이 좋아하는 셀러브리티의 성격, 성향, 취향을 추측 및 해석하는 것)
 
 ​
 
-I'm sure this analytics will help me know myself who is, at the same time, independent and made of my life experiences<br><br><br>
+So do I!
 
 ​
 
-because<br><br><br>
-
-
-
-As human, we are continuously influenced by beloved books, films, and music. And it's uncontentious that they make ourselves even though we seem abstract and independent creatures.  <br><br>
-
-
-The things I want to analyze and share with you are are<br><br>
+좋아하는 연예인 또는 영화나 드라마 속 등장인물의 캐해를 하는 것도 재미있지만 뭐니뭐니해도 제일 재미있는 캐.해는 내 캐.해 당하기 ㅎ_ㅎ
 
 ​
 
-1. What is <b>the word that appears most often in the titles</b> of books on my book wishlist?
-<br>
-2. What <b>publishing corporation</b> is my favorite?
-<br>
-3. What <b>book series</b> do I love the most?
-<br>
-4. What <b>genre of book</b> I am interested in the most?
-<br><br><br><br>
-​
-
-​
-​
-<br><br>
-​
-
-Shall we dive into my book wishlist?
-
-​<br><br>
+인기가요 샌드위치도 아니고 순전히 캐.해 당하고 싶어서 아이돌 데뷔를 잠깐(3초) 고민했으나 그것은 아무래도 무리라는 생각에
 
 ​
 
-You are always welcome!<br>
+데이터 통계, 분석 프로그램 R을 이용해서
 
-​</div>
+꽤나 과학적으로
 
-</html>
+꽤나 신빙성 있게^^
+
+약 반년간 알라딘 보관함에 넣어온 책 리스트(Book Wish List)를 분석해보기로 했습니다.
+
+​
+
+독립적이면서도 무언가로부터 끊임없이 영향을 받아온 나라는, 어쩌면 추상적인 개인을 100퍼센트 꿰뚫어볼 수는 없지만 좋아하는 책, 영화 또는 음악이 나라는 인간에 대해 더 잘 알게 해주는 건 분명하니까요.
+
+​
+
+이번 낱말 프로젝트에서 다뤄볼 것은
+
+​
+
+1. 내 북 위시리스트에 있는 책들의 제목에 가장 자주 등장하는 단어는 무엇인가?
+
+2. 내 북 위시리스트에 가장 많이 있는 책 시리즈는 무엇인가?
+
+3. 내 북 위시리스트에 가장 많이 있는 책 출판사는 무엇인가?
+
+4. 내 북 위시리스트에 가장 많이 있는 책 분야는 무엇인가?
+
+입니다!
+
+​
+
+ 저는 '진리를 찾아 떠나 얻은 것을 바탕으로 저만의 예술을 하고픈 여행가(김하온 왈)'니까요
+
+
+
+ ​<![meditatingfrog](frog.png)
+
+ 그럼 이만
+
+ ​
+
+ 내 첫 데이터 분석 프로젝트 아자아자 화이팅!~~!~!
+
+ ​
