--- a/_posts/2019-05-17-word1.markdown
+++ b/_posts/2019-05-17-word1.markdown
@@ -1,5 +1,5 @@
 ---
-title: "Word Project #1"
+title: "Word Project 1: Words"
 layout: post
 date: 2019-05-17 19:02
 image: /assets/images/markdown.jpg
@@ -13,6 +13,44 @@ author: Hailey Haeun Park
 description: Word Project #1
 ---
 
-<div style="text-align: center">
-hello
-​</div>
+'내 북 위시 리스트 속 책의 제목에 가장 자주 등장하는 단어는 뭘까?'
+
+
+이 질문은 나라는 사람을 얼마나 드러낼까? 이번 소프로젝트의 결과를 보면 알수 있을 거다.
+
+​
+
+​
+
+레쓰기릿
+
+​
+
+​
+
+일단 알라딘 보관함에서 리스트를 엑셀로 저장해온다. 캡쳐 당시엔 보관함에 331개의 책을 넣어두었구나! 항상 느끼지만 세상은 넓고 인생은 짧고 갈 곳은 많고 읽을 책은 많다.
+
+
+<![](assets/images/1-1.png)
+
+알라딘에선 보관함의 책 리스트를 '.xls'파일로 제공하고 있는데 이 확장자는 R에서 지원을 하지 않는 듯 해서, save as를 이용해 확장자를 '.xlsx'로 바꿔주었다. 사실 csv파일 쓰는게 제일 편한데 유니코드 인코딩 어쩌구 문제로 한글이 깨지길래 그냥 xlsx파일을 사용했다. (이제 막 시작했는데 야매의 기운이 넘쳐흐른다. 그럼 뭐 어때 아직 시작인데!)
+
+<![](assets/images/1-2.png)
+
+
+
+엑셀 파일을 열면 이런식으로 간소한 설명이 적혀있는데, 분석을 쉽게 하기 위해(첫 열을 header로 자동 지정하기 위해) 엑셀 자체에서 1,2,3,4열을 지웠다. 사실 R에서 지우고 싶었는데 내가 행,열을 구분할 줄 몰라서 ㅋㅋㅋㅋㅋ 계속 실수해서 (Row, column은 안 헷갈리는데 행,열은 헷갈리잖아요ㅜㅜ) 그냥 엑셀로 지웠다^^
+
+​
+
+​<![](assets/images/1-3.png)
+
+그리고 요로코롬 분석을 시작해보자. 사진은 클릭하면 커져요!
+
+<![](assets/images/1-4.png)
+
+셀 제목들이 한국어로 되어있는데 영어로 해야 코딩할 때 쉬울 것 같아서 야매 영어로 이름을 바꿔주었다.
+
+이북도 8권 정도가 포함되어있었는데, 아쉽지만 판형을 기준으로 그냥 다 빼버렸다.
+
+​
