--- a/_posts/2019-05-17-word1.markdown
+++ b/_posts/2019-05-17-word1.markdown
@@ -1,5 +1,5 @@
 ---
-title: "Word Project 1: Words"
+title: "낱말 프로젝트 01: Words"
 layout: post
 date: 2019-05-17 19:02
 image: /assets/images/markdown.jpg
@@ -52,5 +52,126 @@ description: Word Project #1
 셀 제목들이 한국어로 되어있는데 영어로 해야 코딩할 때 쉬울 것 같아서 야매 영어로 이름을 바꿔주었다.
 
 이북도 8권 정도가 포함되어있었는데, 아쉽지만 판형을 기준으로 그냥 다 빼버렸다.
+
+​
+<![](assets/images/1-5.png)
+
+사실 이번 소프로젝트에서는 책 타이틀 column만 있으면 돼서 책 제목만 모아서 txt 파일을 만들어 그걸로 분석했다. 데이터프레임의 한 column만 지정해서 그 행 텍스트만 뽑는 법 아시는 분 댓글 부탁드립니다... !
+
+이 부분에서만 패키지가 4개가 쓰였다. 워드클라우드를 만들기 위해 설치한 패키지들도 있었는데 R plots 창에서 한글이 깨져버리는 문제를 해결하지 못했다. 이런 아쉬웠던 부분들은 마지막에 모아 정리해볼 예정.
+
+​<![](assets/images/1-6.png)
+
+그 다음엔 단어(명사)목록과 등장 횟수를 표로 정리하고, 탑 20을 빈도수로 정렬했다
+
+이렇게 하고 나면
+
+​
+
+​
+
+대망의
+
+​
+
+​
+
+뚜둥
+
+​
+
+​
+
+<b> 이런 결과가 나옵니다 </b>
+
+​<![](assets/images/1-7.png)
+ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ
+
+​
+
+여기서요???1이요??? 조금 갑작스럽군요
+
+​
+
+사실 이게 진짜_최종_데이터분석_결과는 아니고, '2글자 이상의 단어'라는 조건을 지정해주기 전의 raw data라고 보면 된다.
+
+​
+
+​
+
+​
+
+​
+
+그래서 진짜 top 20를 보면
+
+​
+
+​
+
+​
+
+짜잔!
+
+
+​<![](assets/images/1-8.png)
+
+
+
+ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ 1위 반양장 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ
+
+​
+
+그럴수도있는거잖아요 한국인이라면페이퍼백보다양장반양장제본을더좋아할수도있는거잖아요반양장이라는단어가1위할수도 있는거잖아요솔직히반박할수는없는거잖아요.
+
+​
+
+​
+
+​
+
+ 1위 '반양장'
+
+이라는 결과를 보고 재미있어서 소리내 웃었다. 데이터 분석을 한번에 쉽게 후루룩 한게 아니고 막힌 부분들도 많았는데 저런 유쾌한 결과가 나오니까 재미있었다. 뿌듯하기도 했고 ㅎㅎ
+
+​
+
+​
+
+2위 '사랑'
+
+반양장 제외 1위인 '사랑'이라는 단어는 꽤 예측 가능했는데 왜냐면 난 찐으로 사랑을 믿는 사람이기 때무니다.
+
+​
+
+​
+
+​
+
+그 다음으로 '우리', '사람'.. 이런 결과가 나오는 내 자신이 좋았다(킠). 내가 날 잘 알고 있구나하는 생각도 하고, 나 정말 책 편식하는구나 생각했다 ㅋㅋㅋ (이 질문에 대한 답은 책 분야편에서 찾을 수 있다)  
+
+​
+
+​
+
+​
+
+​
+
+결론: '내 북 위시 리스트에 가장 자주 등장하는 단어가 뭘까?'라는 질문은 당신을 설명해주는 일종의 리트머스 시험지가 될 수 있다!
+
+​
+
+​
+
+그럼
+
+​
+
+​
+
+​
+
+20000
 
 ​
