trying making small folders in '_posts'

--- a/_posts/project/2019-05-11-word0.markdown
+++ b/_posts/project/2019-05-11-word0.markdown
@@ -7,7 +7,7 @@ headerImage: false
 projects : true
 tag:
 - project
-- wordproject
+- 낱말프로젝트
 category: project
 author: Hailey Haeun Park
 description: Word Project #0
