--- a/_posts/project/2019-05-22-word2.markdown
+++ b/_posts/project/2019-05-22-word2.markdown
@@ -15,7 +15,7 @@ description: Word Project #2
 
 '내가 제일 좋아하는 책 분야는 뭘까?'
 
-오늘은 내 위시 리스트 속에 가장 많이 들어있는 책의 분야!를 찾아보았다. 편의를 위해 한 칸씩 띄었지만 알고 보면 이어진 <**** 코드 한 줄만으로 /****> 결과를 도출해낼 수 있었다.
+오늘은 내 위시 리스트 속에 가장 많이 들어있는 책의 분야!를 찾아보았다. 편의를 위해 한 칸씩 띄었지만 알고 보면 이어진 ** 코드 한 줄만으로 ** 결과를 도출해낼 수 있었다.
 ​
 <![](assets/images/2-1.png)
 
