--- a/_posts/project/2019-05-11-word0.markdown
+++ b/_posts/project/2019-05-11-word0.markdown
@@ -20,7 +20,7 @@ description: Word Project #0
 
   무신론자에 유사과학을 믿지 않으면서도 괜히 사주 검색해보려고 부모님께 탄생시간을 물어본 적이 있나요?^^
 
-![samehere](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQC8KRDDc2AUNK8rhkpvOO6sK-0vGPByVEOIKk67eIZaNcbC6Js "Same here")
+![samehere](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQC8KRDDc2AUNK8rhkpvOO6sK-0vGPByVEOIKk67eIZaNcbC6Js "Same here"){: class="bigger-image" }
 
 
 If you are those type of person, <br><br>
@@ -80,11 +80,11 @@ So do I!
 
 ​
 
- 저는 '진리를 찾아 떠나 얻은 것을 바탕으로 저만의 예술을 하고픈 여행가(김하온 왈)'니까요
+ 저는 '진리를 찾아 떠나 얻은 것을 바탕으로 저만의 예술을 하고픈 여행가(래퍼 HAON 왈)'니까요
 
 
 
- ​<![meditatingfrog](assets/images/frog.png)
+ ​![meditatingfrog](https://i.ytimg.com/vi/zZLitvV6f5Y/hqdefault.jpg "Meditating frog"){: class="bigger-image" }
 
  그럼 이만
 
