--- a/_posts/project/2019-05-11-word0.markdown
+++ b/_posts/project/2019-05-11-word0.markdown
@@ -26,7 +26,7 @@ description: Word Project #0
 
 그렇다면 당신은
 
-캐.해 중독자 입니다.
+**캐.해 중독자** 입니다.
 
 (캐.해: 캐릭터 해석 / 팬들이 좋아하는 셀러브리티의 성격, 성향, 취향을 추측 및 해석하는 것)
 
@@ -39,13 +39,13 @@ description: Word Project #0
 
 ​
 
-데이터 통계, 분석 프로그램 R을 이용해서
+데이터 통계, 분석 프로그램 **R** 을 이용해서
 
 꽤나 과학적으로
 
 꽤나 신빙성 있게^^
 
-약 반년간 알라딘 보관함에 넣어온 책 리스트(Book Wish List)를 분석해보기로 했습니다.
+약 반년간 **알라딘 보관함에 넣어온 책 리스트(Book Wish List)** 를 분석해보기로 했습니다.
 
 ​
 
@@ -56,8 +56,7 @@ description: Word Project #0
 이번 낱말 프로젝트에서 다뤄볼 것은
 
 ​
-
-1. 내 북 위시리스트에 있는 책들의 제목에 가장 자주 등장하는 단어는 무엇인가?
+**1. 내 북 위시리스트에 있는 책들의 제목에 가장 자주 등장하는 단어는 무엇인가?
 
 2. 내 북 위시리스트에 가장 많이 있는 책 시리즈는 무엇인가?
 
@@ -65,8 +64,7 @@ description: Word Project #0
 
 4. 내 북 위시리스트에 가장 많이 있는 책 분야는 무엇인가?
 
-입니다!
-
+입니다!**
 ​
 
  저는 '진리를 찾아 떠나 얻은 것을 바탕으로 저만의 예술을 하고픈 여행가(래퍼 HAON 왈)'니까요
