--- a/_posts/project/2019-05-17-word1.markdown
+++ b/_posts/project/2019-05-17-word1.markdown
@@ -13,7 +13,7 @@ author: Hailey Haeun Park
 description: Word Project #1
 ---
 
-'내 북 위시 리스트 속 책의 제목에 가장 자주 등장하는 단어는 뭘까?'
+**'내 북 위시 리스트 속 책의 제목에 가장 자주 등장하는 단어는 뭘까?'**
 
 
 이 질문은 나라는 사람을 얼마나 드러낼까? 이번 소프로젝트의 결과를 보면 알수 있을 거다.
@@ -31,7 +31,7 @@ description: Word Project #1
 일단 알라딘 보관함에서 리스트를 엑셀로 저장해온다. 캡쳐 당시엔 보관함에 331개의 책을 넣어두었구나! 항상 느끼지만 세상은 넓고 인생은 짧고 갈 곳은 많고 읽을 책은 많다.
 
 
-<![](assets/images/1-1.png)
+<![1](hailey99.github.io/assets/images/1-1.png "Site:Aladin")
 
 알라딘에선 보관함의 책 리스트를 '.xls'파일로 제공하고 있는데 이 확장자는 R에서 지원을 하지 않는 듯 해서, save as를 이용해 확장자를 '.xlsx'로 바꿔주었다. 사실 csv파일 쓰는게 제일 편한데 유니코드 인코딩 어쩌구 문제로 한글이 깨지길래 그냥 xlsx파일을 사용했다. (이제 막 시작했는데 야매의 기운이 넘쳐흐른다. 그럼 뭐 어때 아직 시작인데!)
 
