--- a/_posts/project/2019-05-17-word1.markdown
+++ b/_posts/project/2019-05-17-word1.markdown
@@ -31,11 +31,11 @@ description: Word Project #1
 일단 알라딘 보관함에서 리스트를 엑셀로 저장해온다. 캡쳐 당시엔 보관함에 331개의 책을 넣어두었구나! 항상 느끼지만 세상은 넓고 인생은 짧고 갈 곳은 많고 읽을 책은 많다.
 
 
-<![1](http://hailey99.github.io/assets/images/1-1.png "Site:Aladin")
+![1](http://hailey99.github.io/assets/images/1-1.png "Site:Aladin")
 
 알라딘에선 보관함의 책 리스트를 '.xls'파일로 제공하고 있는데 이 확장자는 R에서 지원을 하지 않는 듯 해서, save as를 이용해 확장자를 '.xlsx'로 바꿔주었다. 사실 csv파일 쓰는게 제일 편한데 유니코드 인코딩 어쩌구 문제로 한글이 깨지길래 그냥 xlsx파일을 사용했다. (이제 막 시작했는데 야매의 기운이 넘쳐흐른다. 그럼 뭐 어때 아직 시작인데!)
 
-<![](assets/images/1-2.png)
+![](http://hailey99.github.io/assets/images/1-2.png "Organizing Excel Sheet")
 
 
 
@@ -43,24 +43,24 @@ description: Word Project #1
 
 ​
 
-​<![](assets/images/1-3.png)
+​![](http://hailey99.github.io/assets/images/1-3.png)
 
 그리고 요로코롬 분석을 시작해보자. 사진은 클릭하면 커져요!
 
-<![](assets/images/1-4.png)
+![](http://hailey99.github.io/assets/images/1-4.png)
 
 셀 제목들이 한국어로 되어있는데 영어로 해야 코딩할 때 쉬울 것 같아서 야매 영어로 이름을 바꿔주었다.
 
 이북도 8권 정도가 포함되어있었는데, 아쉽지만 판형을 기준으로 그냥 다 빼버렸다.
 
 ​
-<![](assets/images/1-5.png)
+![](http://hailey99.github.io/assets/images/1-5.png)
 
 사실 이번 소프로젝트에서는 책 타이틀 column만 있으면 돼서 책 제목만 모아서 txt 파일을 만들어 그걸로 분석했다. 데이터프레임의 한 column만 지정해서 그 행 텍스트만 뽑는 법 아시는 분 댓글 부탁드립니다... !
 
 이 부분에서만 패키지가 4개가 쓰였다. 워드클라우드를 만들기 위해 설치한 패키지들도 있었는데 R plots 창에서 한글이 깨져버리는 문제를 해결하지 못했다. 이런 아쉬웠던 부분들은 마지막에 모아 정리해볼 예정.
 
-​<![](assets/images/1-6.png)
+​![](http://hailey99.github.io/assets/images/1-6.png)
 
 그 다음엔 단어(명사)목록과 등장 횟수를 표로 정리하고, 탑 20을 빈도수로 정렬했다
 
@@ -84,7 +84,7 @@ description: Word Project #1
 
 <b> 이런 결과가 나옵니다 </b>
 
-​<![](assets/images/1-7.png)
+​![](http://hailey99.github.io/assets/images/1-7.png)
 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ
 
 ​
@@ -114,7 +114,7 @@ description: Word Project #1
 짜잔!
 
 
-​<![](assets/images/1-8.png)
+​![](http://hailey99.github.io/assets/images/1-8.png)
 
 
 
