--- a/_posts/project/2018-12-30-word2.markdown
+++ b/_posts/project/2018-12-30-word2.markdown
@@ -137,7 +137,7 @@ View(Fields)
 
 ​
 
-**페터 빅셀(스위스), 캐롤 쉴즈(캐나다), 리처드 플래너건(호주), 린이한(대만) 등등 정말 말그대로 '기타 국가'** 의 글들이었다.
+**페터 빅셀(스위스), 캐롤 쉴즈(캐나다), 리처드 플래너건(호주), 린이한(대만) 등등 정말 말그대로 '기타 국가'의 글들이었다.**
 
 ​
 
