--- a/_posts/project/2018-12-11-word0.markdown
+++ b/_posts/project/2018-12-11-word0.markdown
@@ -16,10 +16,10 @@ description: Word Project #0
   혹시 당신.. MBTI 결과가 안 바뀌었을 걸 알면서도 MBTI 사이트 링크가 눈에 보일 때마다 해보시나요?
 
 
-  남한테 툭하면 '내 첫인상 어땠어?'를 물어보시나요?
+  남한테 듣는 자신의 첫인상 이야기가 그렇게 재미있나요?
 
 
-  무신론자에 유사과학을 믿지 않으면서도 괜히 사주 검색해보려고 부모님께 탄생시간을 물어본 적이 있나요?^^
+  무신론자, 유사과학을 믿지 않으면서도 괜히 사주 검색해보려고 부모님께 탄생시간을 물어본 적이 있나요?^^
 
 
 ![samehere](http://hailey99.github.io/assets/images/samehere.jpeg){: width=230 height=180}
@@ -52,29 +52,23 @@ description: Word Project #0
 
 ​
 
-독립적이면서도 무언가로부터 끊임없이 영향을 받아온 나라는, 어쩌면 추상적인 개인을 100퍼센트 꿰뚫어볼 수는 없지만 좋아하는 책, 영화 또는 음악이 나라는 인간에 대해 더 잘 알게 해주는 건 분명하니까요.
+독립적이면서도 무언가로부터 끊임없이 영향을 받아온 개인을 100퍼센트 꿰뚫어볼 수는 없지만 좋아하는 책, 영화 또는 음악이 나에 대해 더 잘 알게 해주는 건 분명하니까요.
 
 ​
 
 이번 낱말 프로젝트에서 다뤄볼 것은
 
-
-​
-**1. 내 북 위시리스트에 있는 책들의 제목에 가장 자주 등장하는 단어는 무엇인가?
+{% highlight raw %}
+1. 내 북 위시리스트에 있는 책들의 제목에 가장 자주 등장하는 단어는 무엇인가?
 
 2. 내 북 위시리스트에 가장 많이 있는 책 시리즈는 무엇인가?
 
 3. 내 북 위시리스트에 가장 많이 있는 책 출판사는 무엇인가?
 
 4. 내 북 위시리스트에 가장 많이 있는 책 분야는 무엇인가?
-
-입니다!**
+{% endhighlight %}
 ​
-
-
- 저는 '진리를 찾아 떠나 얻은 것을 바탕으로 저만의 예술을 하고픈 여행가(래퍼 HAON 왈)'니까요
-
-
+입니다.
 
  ​![meditatingfrog](http://hailey99.github.io/assets/images/frog.png "Meditating frog"){: width=100 height=80 }
 
