--- a/_posts/project/2018-12-28-word1.markdown
+++ b/_posts/project/2018-12-28-word1.markdown
@@ -16,9 +16,9 @@ description: Word Project #1
 **'내 북 위시 리스트 속 책의 제목에 가장 자주 등장하는 단어는 뭘까?'**
 
 
-이 질문은 나라는 사람을 얼마나 드러낼까? 이번 소프로젝트의 결과를 보면 알수 있을 거다.
+이 질문은 나라는 사람을 얼마나 드러낼까? 이번 소프로젝트의 결과를 보면 알 게 될 것이다.
 
-​####코드는 맨 아래에 있습니다.
+​*코드는 맨 아래에 첨부되어있습니다.*
 
 ​
 
@@ -26,49 +26,46 @@ description: Word Project #1
 
 ​
 
-​
-
-일단 알라딘 보관함에서 리스트를 엑셀로 저장해온다. 캡쳐 당시엔 보관함에 331개의 책을 넣어두었구나! 항상 느끼지만 세상은 넓고 인생은 짧고 갈 곳은 많고 읽을 책은 많다.
+일단 알라딘 보관함에서 리스트를 엑셀로 저장해온다. 캡쳐 당시엔 보관함에 331개의 책을 넣어두었다! 항상 느끼지만 세상은 넓고 인생은 짧고 갈 곳은 많고 읽을 책은 많다.
 
 
 ![1](http://hailey99.github.io/assets/images/1-1.png "Site:Aladin")
 
-알라딘에선 보관함의 책 리스트를 '.xls'파일로 제공하고 있는데 이 확장자는 R에서 지원을 하지 않는 듯 해서, save as를 이용해 확장자를 '.xlsx'로 바꿔주었다. 사실 csv파일 쓰는게 제일 편한데 유니코드 인코딩 어쩌구 문제로 한글이 깨지길래 그냥 xlsx파일을 사용했다. (이제 막 시작했는데 야매의 기운이 넘쳐흐른다. 그럼 뭐 어때 아직 시작인데!)
+알라딘에선 보관함의 책 리스트를 '.xls'파일로 제공하고 있는데 이 확장자는 R에서 지원을 하지 않는 듯 해서, save as를 이용해 *확장자를 '.xlsx'* 로 바꿔주었다. 사실 csv파일 쓰는게 제일 편한데 유니코드 인코딩 어쩌구 문제로 한글이 깨지길래 그냥 xlsx파일을 사용했다.
 
 ![](http://hailey99.github.io/assets/images/1-2.png "Organizing Excel Sheet")
 
 
-
-엑셀 파일을 열면 이런식으로 간소한 설명이 적혀있는데, 분석을 쉽게 하기 위해(첫 열을 header로 자동 지정하기 위해) 엑셀 자체에서 1,2,3,4열을 지웠다. 사실 R에서 지우고 싶었는데 내가 행,열을 구분할 줄 몰라서 ㅋㅋㅋㅋㅋ 계속 실수해서 (Row, column은 안 헷갈리는데 행,열은 헷갈리잖아요ㅜㅜ) 그냥 엑셀로 지웠다^^
-
+엑셀 파일을 열면 이런 식으로 간소한 설명이 적혀 있는데, 분석을 쉽게 하기 위해(첫 열을 header로 자동 지정하기 위해) 엑셀 자체에서 1,2,3,4열을 지웠다.
 ​
 
 ​![](http://hailey99.github.io/assets/images/1-3.png)
 
 
-그리고 요로코롬 분석을 시작해보자.
+요로코롬 분석을 시작해보자.
 
 ![](http://hailey99.github.io/assets/images/1-4.png)
 
 
 
-셀 제목들이 한국어로 되어있는데 영어로 해야 코딩할 때 쉬울 것 같아서 야매 영어로 이름을 바꿔주었다.
+셀 제목들이 한국어로 되어있는데 영어로 해야 코딩할 때 쉬울 것 같아서 대충 영어로 이름을 바꿨다.
 
-이북도 8권 정도가 포함되어있었는데, 아쉽지만 판형을 기준으로 그냥 다 빼버렸다.
+전자책도 8권 정도가 포함되어있었는데, 아쉽지만 판형을 기준으로 그냥 다 빼버렸다.
 
 ​
 ![](http://hailey99.github.io/assets/images/1-5.png)
 
 
-사실 이번 소프로젝트에서는 책 타이틀 column만 있으면 돼서 책 제목만 모아서 txt 파일을 만들어 그걸로 분석했다. 데이터프레임의 한 column만 지정해서 그 행 텍스트만 뽑는 법 아시는 분 댓글 부탁드립니다... !
+이번 소프로젝트에서는 책 타이틀 column만 있으면 돼서 책 제목만 모아서 txt 파일을 만들어 그걸로 분석했다.
+*데이터프레임의 한 column만 지정해서 그 행 텍스트만 뽑는 법 아시는 분 댓글 부탁드립니다...!*
 
-이 부분에서만 패키지가 4개가 쓰였다. 워드클라우드를 만들기 위해 설치한 패키지들도 있었는데 R plots 창에서 한글이 깨져버리는 문제를 해결하지 못했다. 이런 아쉬웠던 부분들은 마지막에 모아 정리해볼 예정.
+이 부분에서만 패키지가 4개가 쓰였다. 워드클라우드를 만들기 위해 설치한 패키지들도 있었는데 R plots 창에서 한글이 깨져버리는 문제를 해결하지 못했다.
 
 ​![](http://hailey99.github.io/assets/images/1-6.png)
 
 
 
-그 다음엔 단어(명사)목록과 등장 횟수를 표로 정리하고, 탑 20을 빈도수로 정렬했다
+그 다음엔 *단어(명사)목록과 등장 횟수를 표로 정리하고, 탑 20을 빈도수로 정렬* 했다
 
 이렇게 하고 나면
 
@@ -85,11 +82,11 @@ Drum roll please!
 
 ​
 
-여기서요???1이요??? 조금 갑작스럽군요
+여기서요???1이요??? 조금 갑작스럽군요;;
 
 ​
 
-사실 이게 진짜_최종_데이터분석_결과는 아니고, '2글자 이상의 단어'라는 조건을 지정해주기 전의 raw data라고 보면 된다.
+사실 이게 진짜_최종_은 아니고, *'2글자 이상의 단어'라는 조건을 지정해주기 전의 raw data* 라고 보면 된다.
 ​
 
 ​
@@ -108,28 +105,26 @@ Drum roll please!
 
 
 
-ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ 1위 반양장 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ
+ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ 1위 반양장 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ
 
 
 
-그럴수도있는거잖아요 한국인이라면페이퍼백보다양장반양장제본을더좋아할수도있는거잖아요반양장이라는단어가1위할수도있는거잖아요솔직히반박할수없는거잖아요.
-
-​
+그럴수도있는거잖아요한국인이라면페이퍼백보다양장반양장제본을더좋아할수도있는거잖아요반양장이라는단어가1위할수도있는거잖아요
 
 ​
 
+​
 
  1위 '반양장'
 
-이라는 결과를 보고 재미있어서 소리내 웃었다. 데이터 분석을 한번에 쉽게 후루룩 한게 아니고 막힌 부분들도 많았는데 저런 유쾌한 결과가 나오니까 재미있었다. 뿌듯하기도 했고 ㅎㅎ
+이라는 결과를 보고 소리내 웃었다. 데이터 분석을 한번에 쉽게 후루룩 한게 아니고 막힌 부분들도 많았는데 저런 유쾌한 결과가 나오니까 재미있었다. 뿌듯하기도 했고 ㅎㅎ
 
-​
 
 ​
 
 2위 '사랑'
 
-반양장 제외 1위인 '사랑'이라는 단어는 꽤 예측 가능했는데 왜냐면 난 찐으로 사랑을 믿는 사람이기 때무니다.
+반양장 제외 1위인 '사랑'이라는 단어는 꽤 예측 가능했는데 왜냐면 난 찐으로 사랑을 믿는 사람이기 때무니다,,
 
 ​
 
