--- a/_posts/project/2018-12-30-word2.markdown
+++ b/_posts/project/2018-12-30-word2.markdown
@@ -15,9 +15,9 @@ description: Word Project #2
 
 **'내가 제일 좋아하는 책 분야는 뭘까?'**
 
-오늘은 내 위시 리스트 속에 가장 많이 들어있는 책의 분야!를 찾아보았다. 편의를 위해 한 칸씩 띄었지만 알고 보면 이어진 **코드 한 줄만으로** 결과를 도출해낼 수 있었다.
+오늘은 내 위시 리스트 속에 가장 많이 들어있는 책의 분야!를 찾아보았다. 편의를 위해 한 칸씩 띄었지만 알고 보면 이어진 *코드 한 줄만으로* 결과를 도출해낼 수 있었다.
 ​
-<![](http://hailey99.github.io/assets/images/2-1.png)
+![](http://hailey99.github.io/assets/images/2-1.png)
 
 
 사실 25열까지는 지난 소프로젝트에도 등장한 부분이다.
@@ -25,12 +25,7 @@ description: Word Project #2
 29열부터 시작되는, '%>%'로 이어서 데이터 분석하는 건 몇주전까지 열심히 연습했었는데 시험기간이라고 잠시 내려놓았었더니 금세 좀 까먹어버렸다. 종강도 했으니, 다시 뇌에 R기름을 윤기 좔좔 흐르게 칠할 시간!!
 
 ​
-
-​
-
 그래서 결과는?
-
-​
 
 ​
 
@@ -39,18 +34,15 @@ View(Fields)
 ​
 
 ​
-
-**#어디 한번 볼까요?**
-
-<![](http://hailey99.github.io/assets/images/2-2.png)
+![](http://hailey99.github.io/assets/images/2-2.png)
 
 ​**'2000년대 이후 한국소설'** 이 1위를 했다.
 
 이 영광을 '피프티 피플', '보건교사 안은영'을 쓰신 정세랑 작가님❤️에게 돌립니다.
 
-입시때문에 한동안 책의 재미를 잃고 살았는데 그 두 책을 읽고 다시 책의 재미에 빠졌기 때문이죠!
+입시때문에 한동안 글의 재미를 잃고 살았는데 그 두 책을 읽고 다시 책의 재미에 빠졌기 때문이죠!
 
-그리고 그냥 한국 소설이 아니라 '2000년대 이후'라는 게 좋은데 좀 과거의 책들에는 솔직히 불편한 비유들이 많았고 여성 등장인물도 적을 뿐더러, 그들이 대상화되는 일이 많았기 때문이다.
+그냥 한국 소설이 아니라 '2000년대 이후'라는 게 좋은데 과거의 책들에는 솔직히 불편하게 느껴지는 비유와 성적 대상화들이 많았고 여성 등장인물도 적을 뿐더러, 그들이 대상화되는 일이 많았기 때문이다.
 
 문단내_성폭력 해시태그가 일렁이던 그 시즌에 우리 다 많이 아쉽고 슬프고 화났었잖아요 그쵸.
 
@@ -64,7 +56,7 @@ View(Fields)
 
 2위는 **'영미소설'**
 
-어렸을 때부터 한국, 일본보다는 영미 컨텐츠를 사랑했다. 지브리도 사랑하지만 그래도 지브리보다는 드림웍스, 픽사 러버였고, 아직도 외로움을 달래줄 BGM이 필요할 때면 슈렉 또는 토이스토리를 틀어놓는다. 가장 좋아하는 애니메이션은 당연히 The Simpsons!!!
+어렸을 때 가까운 나라인 일본보다 미국 컨텐츠의 영향을 많이 받았다. 지브리보다는 드림웍스 픽사 러버였고, 아직도 외로움을 달래줄 BGM이 필요할 때면 슈렉 또는 토이스토리를 틀어놓는다. 가장 좋아하는 만화는 당연히 The Simpsons!!!
 
 하지만 이 이유말고도 영미권의 책, 즉 영어로 쓰인 책이 번역되어 수입될 기회가 제일 많기 때문에 그런건 아닐까?하는 생각도 해봅니다. 익숙한게 무서운거야^^
 
@@ -74,11 +66,11 @@ View(Fields)
 
 3위는 **'교양 인문학'**
 
-흠 이 결과는 리를빗 의외였다. 인문학적 소양을 가꾸고 싶단 욕심이 많긴 하지만, 정작 그쪽(거리 두는거 아님) 책을 많이 읽어오진 않았기 때무니다 그거슨 내 머리가 수면 스위치를 켜버리기 때무니다ㅜㅜ
+이 결과는 약간 의외였다. 인문학적 소양을 가꾸고 싶단 욕심이 많긴 하지만, 정작 그쪽(거리 두는거 아님) 책을 많이 읽어오진 않았기 때무니다 그거슨 내 머리가 수면 스위치를 켜버리기 때무니다ㅜㅜ
 
 ​
 
-갑자기 내린 결심: 2019년엔 인문학 책을 '나중에 읽어야지~'하고 보관함에 담지만 말고 진짜로! 시간을 만들어서 읽어야겠다.
+뜬금없는 결심: 2019년엔 인문학 책을 '나중에 읽어야지~'하고 보관함에 담지만 말고 진짜로! 시간을 내서 읽어야겠다.
 
 
 
@@ -88,9 +80,9 @@ View(Fields)
 
 그런데 여기서 든 의문!
 
-<![](http://hailey99.github.io/assets/images/2-3.png)
+![](http://hailey99.github.io/assets/images/2-3.png)
 
-'외국'이라는 분류는 무엇인가? '외국 소설'도 아니고, '~~국 소설'도 아니고 저 흐리멍텅 애매모호 아리까리한 분류는 무엇인가???
+*'외국'* 이라는 분류는 무엇인가? '외국 소설'도 아니고, '~~국 소설'도 아니고 저 흐리멍텅 애매모호 아리까리한 분류는 무엇인가???
 
 ​
 
@@ -98,13 +90,13 @@ View(Fields)
 
  궁금하니까, '외국'이라는 분류를 가진 책들엔 무엇무엇이 있는지 알아보기로 한다.
 
-<![](http://hailey99.github.io/assets/images/2-4.png)
+![](http://hailey99.github.io/assets/images/2-4.png)
 ​
 
 요로코롬 코드를 치면!
 
 ​
-<![](http://hailey99.github.io/assets/images/2-5.png)
+![](http://hailey99.github.io/assets/images/2-5.png)
 ​
 
 
@@ -112,42 +104,37 @@ View(Fields)
 
 ​
 
-'외국'이라기보단 그냥 '영미 소설'로 분류되었으면 됐을 것 같은데 말이다. 만약 그렇게 되었다면 국내 소설이 1위 자리를 뺏겼겠됴?
+'외국'이라기보단 그냥 '영미 소설'로 분류되었으면 됐을 것 같은데 말이다. 만약 그렇게 되었다면 국내 소설이 1위 자리를 뺏겼을 수도 있겠다.
 
 ​
 
-​
+
 
 ​
-
 여기서 두번째 의문.
 
 기타 국가 소설? '기타 국가'가 어떤 나라들을 말하는 걸까?
 
-<![](http://hailey99.github.io/assets/images/2-6.png)
+![](http://hailey99.github.io/assets/images/2-6.png)
 
 방금 친 코드에서 field 이름만 '기타 국가 소설'로 바꿔준다. 아주 쉽다.
 
-​<![](http://hailey99.github.io/assets/images/2-7.png)
+​![](http://hailey99.github.io/assets/images/2-7.png)
 
 
 그럼 이런 결과가 나오는데
 
+
+페터 빅셀(스위스), 캐롤 쉴즈(캐나다), 리처드 플래너건(호주), 린이한(대만) 등등 정말 말그대로 '기타 국가'의 글들이었다.
 ​
 
-​
-
-**페터 빅셀(스위스), 캐롤 쉴즈(캐나다), 리처드 플래너건(호주), 린이한(대만) 등등 정말 말그대로 '기타 국가'의 글들이었다.**
-
-​
-
-외국 사람들한테는 한국 소설이 '기타 국가 소설'이겠지? 한 언어로 쓰인 글을 번역하게 되면 그 뉘앙스를 100퍼센트 살릴 수 없다는게 넘넘 아쉽다. 이런 점에서 나와 같은 언어를 공유하는 분의 글이 더 소중하게 다가온다.
+외국 사람들한테는 한국 소설이 '기타 국가 소설'이겠지? 한 언어로 쓰인 글을 번역하게 되면 그 뉘앙스를 100퍼센트 살릴 수 없다는 건 언제나 아쉽다. 이러한 이유로, 나와 같은 언어를 공유하는 분의 글이 참 소중하다.
 
 
 
 
-###내가 책을 가려 읽는단 사실을 다시 한번 실감했다.
-남미 또는 아프리카와 같이, 평소에 잘 접해보지 못한 곳의 책들에 도전해야겠다.
+내가 책을 가려 읽는단 사실을 다시 한번 실감했다.
+남미 또는 아프리카와 같이 평소에 잘 접해보지 못한 곳의 책들에 도전해야겠다.
 
 
 2019년엔 더 계획적인 독서를 해야지!
