--- a/_posts/blog/2019-05-01-2.markdown
+++ b/_posts/blog/2019-05-01-2.markdown
@@ -1,5 +1,5 @@
 ---
-title: "Started Github Pages"
+title: "Built my own Github page"
 layout: post
 date: 2019-05-01 01:48
 image: /assets/images/markdown.jpg
@@ -8,10 +8,10 @@ tag:
 - blog
 category: blog
 author: Hailey Haeun Park
-description: I FINALLY started Github pages!
+description: I've FINALLY got my own Github page!
 ---
 
-<h2> I FINALLY started Github pages! </h2>
+**I've FINALLY got my own Github page!**
 
 Today is May 1st 2019, the day I'm flying out to Seoul. It's been a year since I left there on April 27th, 2018!
 One of my goal this May is creating my own Github page, learning how to use git, being familiar with HTML, CSS, and markdown.
@@ -22,7 +22,7 @@ I just wanna share some songs that I can't love more and the feelings I go throu
 
 
 
-One is **_Lee Sora - Track 9_**. This comforting song is what I listened to at the plane to Toronto. I embedded the youtube video playing with a river view of Seoul I can't wait to see it.
+One is **Lee Sora - Track 9**. This comforting song is what I listened to at the plane to Toronto. I embedded the youtube video playing with a river view of Seoul I can't wait to see it.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5LzfjF1ESIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -32,7 +32,7 @@ One is **_Lee Sora - Track 9_**. This comforting song is what I listened to at t
 
 
 
-The other one is **_Safeplanet - คำตอบ_**, the song I'm gonna listen to in the air heading to Seoul. I've known this band only for 3 weeks but I'm sure I'll stan it for a long time cuz this band let me know the coolness of Thai indie band. It's a shame I can't understand Thai tho.
+The other one is **Safeplanet - คำตอบ**, the song I'm gonna listen to in the air heading to Seoul. I've known this band only for 3 weeks but I'm sure I'll stan it for a long time cuz this band let me know the coolness of Thai indie band. It's a shame I can't understand Thai tho.
 
 
 
