--- a/_posts/blog/2018-11-17-1.markdown
+++ b/_posts/blog/2018-11-17-1.markdown
@@ -11,55 +11,46 @@ author: Hailey Haeun Park
 description: Joined a terrific event about Data Journalism.
 ---
 
+<img src="http://hailey99.github.io/assets/images/can0.png" width="700">
 
-<html>
+<I>Join some of Canada’s most prolific investigative reporters, developers, coders and data advocates for a one-day data journalism symposium. Delve into the strategies they use to turn terabytes of raw data into exclusive scoops that have already had a demonstrable impact on the politics, social justice, and day-to-day lives of Canadians. / from https://humber.ca/today/events/data-driven-20-54102 </I>
 
-<center><img src="http://hailey99.github.io/assets/images/can0.png" width="700"></center>
 
-<I><center>Join some of Canada’s most prolific investigative reporters, developers, coders and data advocates for a one-day data journalism symposium. Delve into the strategies they use to turn terabytes of raw data into exclusive scoops that have already had a demonstrable impact on the politics, social justice, and day-to-day lives of Canadians. / from https://humber.ca/today/events/data-driven-20-54102 </center> </I>
-
-<br>
 
 <img src="http://hailey99.github.io/assets/images/can1.jpg" width="400"><img src="http://hailey99.github.io/assets/images/can2.jpeg" width="400">
 
-<br>
 
-<center class="p">
+
+
   학교 미디어학부랑 구글 캐나다가 진행하는 컨퍼런스에 다녀왔다. 주제는 'data journalism'이었다. admission 마감 엄청 빨리 됐던데 신청해놓고 안 온 사람들 많아서 쾌적했음. 구글 캐나다 본사라 한 건물 차지하고 있을 줄 알았는데 아니라 놀랐고, 천장이 굉장히 낮았다.
-</center>
 
-<br>
+
+
 
 <img src="http://hailey99.github.io/assets/images/can3.jpeg" width="400"><img src="http://hailey99.github.io/assets/images/can4.jpg" width="400">
 
-<br>
 
-<center class="p">직원들이 각자의 시간을 가질 수 있는 공간들이 마련되어있었는데 방 이름이 하나같이 예뻤다. 벽은 보드마카들이 준비되어있어서 자유롭게 의논하며 시간을 보낼 수 있는 듯했음.</center>
+직원들이 각자의 시간을 가질 수 있는 공간들이 마련되어있었는데 방 이름이 하나같이 예뻤다. 벽은 보드마카들이 준비되어있어서 자유롭게 의논하며 시간을 보낼 수 있는 듯했음.
 
-<br>
 
 <img src="http://hailey99.github.io/assets/images/can5.jpeg" width="800">
 
-<br>
 
-<center class="special p"> 데이터 분석과 마케팅은 '스토리 텔링'이 핵심이라는 점에서 같은 맥락이라고 생각했다. 아무리 흥미로운 데이터 결과를 도출해내더라도 그게 무슨 의미인지, 무슨 가치를 가지고 있는지 정확한 타겟에게 이해하기 쉬운 방식으로 설명할 수 없으면 그 데이터는 가치를 가질 수 없다. 마케팅 또한 그 소비자가 그 물건을 구매해야하는 이유, 스토리가 없으면 그 상품은 가치를 지니지 못하게 된다. 이 두개가 매력적인 이유. </center>
 
-<br>
+
+데이터 분석과 마케팅은 '스토리 텔링'이 핵심이라는 점에서 같은 맥락이라고 생각했다. 아무리 흥미로운 데이터 결과를 도출해내더라도 그게 무슨 의미인지, 무슨 가치를 가지고 있는지 정확한 타겟에게 이해하기 쉬운 방식으로 설명할 수 없으면 그 데이터는 가치를 가질 수 없다. 마케팅 또한 그 소비자가 그 물건을 구매해야하는 이유, 스토리가 없으면 그 상품은 가치를 지니지 못하게 된다. 이 두개가 매력적인 이유.
+
+
+
 
 <img src="http://hailey99.github.io/assets/images/can7.jpeg" width="800">
 
-<br>
 
-<center class="p">오늘 참석했던 행사 완전 Motivating.. 캐나다 온 순간부터 내 comfort zone에서 벗어났으니까 불편하고 힘든 거 당연한건데 그걸 잊고 지쳐가고 있었다. 의사소통부터가 완벽하게 안되니 편안할 수 없는게 당연한건데.. 그렇게 comfort zone에서 벗어나서 press forward하고 싶었으면서 몽총이다 몽총이야.</center>
+오늘 참석했던 행사 완전 Motivating.. 캐나다 온 순간부터 내 comfort zone에서 벗어났으니까 불편하고 힘든 거 당연한건데 그걸 잊고 지쳐가고 있었다. 의사소통부터가 완벽하게 안되니 편안할 수 없는게 당연한건데.. 그렇게 comfort zone에서 벗어나서 press forward하고 싶었으면서 몽총이다 몽총이야.<
 
-<br>
+
 
 <img src="http://hailey99.github.io/assets/images/can8.jpg" width="800">
 
-<br>
 
-<center class="special p">나는 똑똑한 사람을 많이 동경한다. 어른들에 나를 비교하면서 좌절도 많이 한다. 저 사람은 저렇게 능숙하고 여유로운데 난 왜 이렇게 부족하지?하면서. 그 사람도 분명히 나같은 시기가 있었고 다 실수,실패와 경험을 통해서 지금 그 자리에 있게 된 건데말야.. 빨리 나이 먹고 싶은 이유도 이거다. 하고 싶은 거, 욕심은 많은데 미숙한 내가 맘에 들지 않는 거야 근데 이건 진짜 넌센스니까 'Success is when preparation meets opportunity.' 새기면서 지금 내가 할 수 있는 거 열심히 하자.
-</center>
-
-
-</html>
+나는 똑똑한 사람을 많이 동경한다. 어른들에 나를 비교하면서 좌절도 많이 한다. 저 사람은 저렇게 능숙하고 여유로운데 난 왜 이렇게 부족하지?하면서. 그 사람도 분명히 나같은 시기가 있었고 다 실수,실패와 경험을 통해서 지금 그 자리에 있게 된 건데말야.. 빨리 나이 먹고 싶은 이유도 이거다. 하고 싶은 거, 욕심은 많은데 미숙한 내가 맘에 들지 않는 거야 근데 이건 진짜 넌센스니까 'Success is when preparation meets opportunity.' 새기면서 지금 내가 할 수 있는 거 열심히 하자.
